WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290986
REGRESSION(
290563@main
): [Unified PDF] [iOS] Find in page results look blurry when zooming in
https://bugs.webkit.org/show_bug.cgi?id=290986
Summary
REGRESSION(290563@main): [Unified PDF] [iOS] Find in page results look blurry...
Abrar Rahman Protyasha
Reported
2025-04-03 03:29:52 PDT
rdar://147420275
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-04-03 03:52:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43531
EWS
Comment 2
2025-04-03 12:57:40 PDT
Committed
293180@main
(ad6bac3e9673): <
https://commits.webkit.org/293180@main
> Reviewed commits have been landed. Closing PR #43531 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug